--- a/path_config.h.in
+++ b/path_config.h.in
@@ -16,6 +16,6 @@
 #ifndef _DATE_PARSER_PATH_CONFIG_H_
 #define _DATE_PARSER_PATH_CONFIG_H_
 
-#define DATE_PARSER_SRC_PATH "${CMAKE_SOURCE_DIR}"
+#define DATE_PARSER_SRC_PATH "${CMAKE_CURRENT_SOURCE_DIR}"
 
 #endif
